--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,75 @@
 @import "tailwindcss";
+@plugin "daisyui";
+/* @plugin "daisyui" {
+   themes: all;
+} */
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* Custom theme tailwind */
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+  /* Font */
+  --font-poppins: Poppins, sans-serif;
+  /* Primary Color Palette */
+  --color-purple-50: #F9F5FF;
+  --color-purple-100: #F3EBFF;
+  --color-purple-200: #EAD6FF;
+  --color-purple-300: #DBB8FF;
+  --color-purple-400: #C28EFF;
+  --color-purple-500: #865DFF;
+  --color-purple-600: #744CE6;
+  --color-purple-700: #623BCB;
+  --color-purple-800: #4B2F96;
+  --color-purple-900: #37226B;
+  --color-purple-950: #251747;
+  --color-gray-50: #FAFAFA;
+  --color-gray-100: #F5F5F5;
+  --color-gray-200: #E5E5E5;
+  --color-gray-300: #D4D4D4;
+  --color-gray-400: #A3A3A3;
+  --color-gray-500: #737373;
+  --color-gray-600: #525252;
+  --color-gray-700: #404040;
+  --color-gray-800: #262626;
+  --color-gray-900: #171717;
+  --color-gray-950: #0A0A0A;
+  /* System Colors */
+  --color-success-50: #ECFDF5;
+  --color-success-500: #22C55E; 
+  --color-success-700: #047857;
+  --color-warning-50: #FFFBEB;
+  --color-warning-500: #F59E0B; 
+  --color-warning-700: #B45309;
+  --color-error-50: #FEF2F2;
+  --color-error-500: #EF4444;
+  --color-error-700: #B91C1C;
+  --color-info-50: #EFF6FF;
+  --color-info-500: #3B82F6;
+  --color-info-700: #1D4ED8;
+  /* Primary Colors */
+  --color-primary: var(--color-purple-500);
+  --color-primary-light: var(--color-purple-300);
+  --color-primary-dark: var(--color-purple-700);
+  /* Background and Text Colors (Default) */
+  --color-background: #191825;
+  --color-text-default: var(--color-gray-50); 
+  --color-text-secondary: var(--color-gray-300); 
+  --color-border: var(--color-gray-700); 
+  /* ตัวอย่าง: ถ้าอยากให้มีพื้นหลัง "สว่าง" (ในบริบทของ Dark Mode) */
+  --light-color-background: var(--color-gray-800);
+  --light-color-text-default: var(--color-gray-200);
+  --light-color-border: var(--color-gray-600);
+  --dark-color-primary: var(--color-purple-400);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    background-color: var(--color-background);
+    color: var(--color-text-default);
   }
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  
